k8s-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      serviceAccountName: gke-workload-identity-ksa
      containers:
      - name: demo-container
        image: northamerica-northeast1-docker.pkg.dev/phx-01had7ny8p/argocd-artifact-registry/sample-app:latest
        ports:
        - containerPort: 8080
